--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   "header header"
   "nav main"
   "footer footer";
-	font-family: system-ui, sans-serif;
+	font-family: Proxima Nova, sans-serif;
 	font-size: 1.5em;
 }
 
